--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-07-01T11:12:19.527359300Z",
-     "start_time": "2025-07-01T11:07:45.352744900Z"
+     "start_time": "2025-07-02T07:22:46.346230600Z"
     }
    },
    "outputs": [
@@ -18,38 +18,40 @@
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
       "Successfully loaded processed data.\n",
-      "Predicted: A | True: A\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg_test.pkl\n",
+      "Successfully loaded processed data.\n",
       "Predicted: G | True: G\n",
-      "Predicted: H | True: H\n",
-      "Predicted: T | True: T\n",
+      "Predicted: K | True: K\n",
       "Predicted: E | True: E\n",
-      "Predicted: R | True: R\n",
-      "Predicted: N | True: N\n",
-      "Predicted: E | True: E\n",
-      "Predicted: E | True: E\n",
-      "Predicted: F | True: F\n",
-      "Predicted: T | True: T\n",
-      "Predicted: I | True: I\n",
-      "Predicted: A | True: A\n",
-      "Predicted: R | True: R\n",
-      "Predicted: L | True: L\n",
-      "Predicted: G | True: G\n",
-      "Predicted: E | True: E\n",
-      "Predicted: R | True: R\n",
-      "Predicted: G | True: G\n",
-      "Predicted: F | True: F\n",
-      "Predicted: R | True: R\n",
       "Predicted: W | True: W\n",
-      "Predicted: H | True: H\n",
-      "Predicted: O | True: O\n",
+      "Predicted: O | True: C\n",
+      "Predicted: E | True: E\n",
+      "Predicted: E | True: E\n",
+      "Predicted: L | True: L\n",
+      "Predicted: N | True: N\n",
+      "Predicted: M | True: M\n",
       "Predicted: G | True: G\n",
+      "Predicted: E | True: E\n",
+      "Predicted: E | True: E\n",
+      "Predicted: E | True: E\n",
+      "Predicted: E | True: E\n",
       "Predicted: A | True: A\n",
-      "Predicted: G | True: P\n",
-      "Predicted: E | True: E\n",
-      "Predicted: E | True: E\n",
-      "Predicted: H | True: H\n",
+      "Predicted: A | True: G\n",
+      "Predicted: N | True: N\n",
+      "Predicted: O | True: O\n",
+      "Predicted: L | True: L\n",
+      "Predicted: T | True: T\n",
+      "Predicted: F | True: F\n",
+      "Predicted: T | True: T\n",
+      "Predicted: N | True: N\n",
+      "Predicted: N | True: N\n",
+      "Predicted: N | True: N\n",
+      "Predicted: T | True: T\n",
+      "Predicted: O | True: O\n",
+      "Predicted: T | True: T\n",
+      "Predicted: D | True: D\n",
       "\n",
-      "Test Accuracy: 91.61%\n",
+      "Test Accuracy: 90.52%\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
@@ -57,36 +59,35 @@
       "           4       0.00      0.00      0.00         0\n",
       "           6       0.00      0.00      0.00         0\n",
       "           8       0.00      0.00      0.00         0\n",
-      "           A       0.90      1.00      0.95       112\n",
-      "           B       0.65      0.81      0.72        21\n",
-      "           C       1.00      0.75      0.86        36\n",
-      "           D       0.94      1.00      0.97       123\n",
-      "           E       0.88      1.00      0.94       253\n",
-      "           F       1.00      1.00      1.00        45\n",
-      "           G       0.88      0.70      0.78        43\n",
-      "           H       0.85      1.00      0.92        90\n",
-      "           I       1.00      0.81      0.89        77\n",
-      "           J       0.00      0.00      0.00         1\n",
-      "           K       1.00      0.88      0.93        40\n",
-      "           L       1.00      1.00      1.00        87\n",
-      "           M       1.00      0.84      0.91        25\n",
-      "           N       1.00      1.00      1.00        73\n",
-      "           O       0.93      0.80      0.86       147\n",
-      "           P       1.00      0.78      0.88        18\n",
-      "           Q       0.00      0.00      0.00         2\n",
-      "           R       0.92      1.00      0.96       130\n",
-      "           T       0.97      0.91      0.94       122\n",
-      "           U       0.67      0.38      0.49        26\n",
-      "           V       0.70      0.70      0.70        20\n",
-      "           W       1.00      0.92      0.96        71\n",
-      "           X       0.00      0.00      0.00         2\n",
-      "           Y       0.86      0.67      0.75         9\n",
+      "           A       0.95      1.00      0.97        69\n",
+      "           B       0.73      0.73      0.73        15\n",
+      "           C       1.00      0.78      0.88        41\n",
+      "           D       0.82      1.00      0.90        50\n",
+      "           E       0.87      1.00      0.93       123\n",
+      "           F       1.00      1.00      1.00        21\n",
+      "           G       0.88      0.85      0.87        27\n",
+      "           H       0.92      1.00      0.96        61\n",
+      "           I       1.00      0.84      0.91        55\n",
+      "           J       0.00      0.00      0.00         0\n",
+      "           K       1.00      0.68      0.81        19\n",
+      "           L       1.00      1.00      1.00        57\n",
+      "           M       1.00      0.75      0.86        20\n",
+      "           N       1.00      1.00      1.00        45\n",
+      "           O       0.83      0.70      0.76        64\n",
+      "           P       1.00      0.70      0.82        10\n",
+      "           Q       0.00      0.00      0.00         1\n",
+      "           R       0.92      1.00      0.96        61\n",
+      "           T       0.92      0.92      0.92        60\n",
+      "           U       0.40      0.44      0.42         9\n",
+      "           V       1.00      0.67      0.80         6\n",
+      "           W       1.00      1.00      1.00        26\n",
+      "           X       0.00      0.00      0.00         1\n",
+      "           Y       0.83      0.42      0.56        12\n",
       "           Z       0.00      0.00      0.00         1\n",
       "\n",
-      "    accuracy                           0.92      1574\n",
-      "   macro avg       0.68      0.64      0.66      1574\n",
-      "weighted avg       0.92      0.92      0.91      1574\n",
-      "Visualizations generated at: ../../visualizations\n"
+      "    accuracy                           0.91       854\n",
+      "   macro avg       0.68      0.62      0.65       854\n",
+      "weighted avg       0.92      0.91      0.90       854\n"
      ]
     }
    ],
@@ -113,7 +114,7 @@
     "# Constants\n",
     "# ===============================\n",
     "NUM_CLASSES = 36\n",
-    "MODEL_PATH = \"../../model/ecd/trained_eegcnn_model_selected_channels.pth\"\n",
+    "MODEL_PATH = \"../../model/ecd/trained_eegcnn_model_selected_channels_set1.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "SELECTED_CHANNELS = [10, 33, 48, 50, 52, 55, 59, 61]\n",
     "\n",
@@ -186,14 +187,16 @@
     "# ===============================\n",
     "# Load Data and Model\n",
     "# ===============================\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg.pkl\")\n",
-    "if not raw_data:\n",
-    "    raise ValueError(\"Failed to load data.\")\n",
     "\n",
+    "\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg.pkl\")\n",
     "all_labels = [item[\"character\"] for item in raw_data]\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(all_labels)\n",
     "\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_test.pkl\")\n",
+    "if not raw_data:\n",
+    "    raise ValueError(\"Failed to load data.\")\n",
     "_, test_set = train_test_split(raw_data, test_size=0.2, random_state=3)\n",
     "test_dataset = EEGDataset(test_set, label_encoder)\n",
     "test_loader = DataLoader(test_dataset, batch_size=64)\n",
