set1  ->   val data

--- a/ecd/jupyter/model/ECD.ipynb
+++ b/ecd/jupyter/model/ECD.ipynb
@@ -53,7 +53,7 @@
     "    def __getitem__(self, idx):\n",
     "        chunk = np.array(self.data[idx][\"eeg_chunk\"], dtype=np.float32)  # (31, 78, 64)\n",
     "        chunk = chunk[:, :, SELECTED_CHANNELS]  # Now (31, 78, 8)\n",
-    "        chunk[30] *= 3.0  # Emphasize the prediction timestep\n",
+    "        chunk[30] *= 3.0 * self.data[idx][\"char_idx_in_sentence\"] / 24   # Emphasize the prediction timestep\n",
     "        label = self.label_encoder.transform([self.data[idx][\"character\"]])[0]\n",
     "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)  # Shape: (1, 31, 78, 8)\n",
     "\n",
