--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2025-07-02T07:22:46.346230600Z"
+     "end_time": "2025-07-02T13:18:43.254111400Z",
+     "start_time": "2025-07-02T13:17:19.742430500Z"
     }
    },
    "outputs": [
@@ -16,9 +16,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg_train_set1.pkl\n",
       "Successfully loaded processed data.\n",
-      "Attempting to load processed data from: ../../data/sentences_eeg_test.pkl\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg_val_set1.pkl\n",
       "Successfully loaded processed data.\n",
       "Predicted: G | True: G\n",
       "Predicted: K | True: K\n",
@@ -106,7 +106,6 @@
     "from sklearn.metrics import classification_report\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from matplotlib.patches import Rectangle\n",
     "\n",
     "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
     "\n",
@@ -189,12 +188,12 @@
     "# ===============================\n",
     "\n",
     "\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg.pkl\")\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_train_set1.pkl\")\n",
     "all_labels = [item[\"character\"] for item in raw_data]\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(all_labels)\n",
     "\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_test.pkl\")\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_val_set1.pkl\")\n",
     "if not raw_data:\n",
     "    raise ValueError(\"Failed to load data.\")\n",
     "_, test_set = train_test_split(raw_data, test_size=0.2, random_state=3)\n",
@@ -249,118 +248,118 @@
     "    zero_division=0\n",
     "))\n",
     "\n",
-    "# ===============================\n",
-    "# Visualizations\n",
-    "# ===============================\n",
-    "def plot_conv1_activations(model, input_tensor, output_dir, index):\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
-    "        x1 = F.relu(model.bn1(model.conv1(input_tensor)))\n",
-    "    x1 = x1.squeeze(0)[:, 30, :, :]\n",
-    "    fig, axes = plt.subplots(4, 8, figsize=(20, 10))\n",
-    "    fig.suptitle(\"Conv1 Activations at Frame 30\", fontsize=16)\n",
-    "    for i in range(32):\n",
-    "        ax = axes[i // 8][i % 8]\n",
-    "        sns.heatmap(x1[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
-    "        ax.set_title(f\"F{i}\")\n",
-    "        ax.axis('off')\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv1_activations.png\"))\n",
-    "    plt.close()\n",
-    "\n",
-    "\n",
-    "def plot_conv2_activations(model, input_tensor, output_dir, index):\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
-    "        x1 = F.relu(model.bn1(model.conv2(input_tensor)))\n",
-    "    x1 = x1.squeeze(0)[:, 30, :, :]\n",
-    "    fig, axes = plt.subplots(4, 8, figsize=(20, 10))\n",
-    "    fig.suptitle(\"Conv1 Activations at Frame 30\", fontsize=16)\n",
-    "    for i in range(32):\n",
-    "        ax = axes[i // 8][i % 8]\n",
-    "        sns.heatmap(x1[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
-    "        ax.set_title(f\"F{i}\")\n",
-    "        ax.axis('off')\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv1_activations.png\"))\n",
-    "    plt.close()\n",
-    "    \n",
-    "def plot_conv2_activations(model, input_tensor, output_dir, index):\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)  # (1, 1, 31, 78, 8)\n",
-    "        x1 = F.relu(model.bn1(model.conv1(input_tensor)))    # (1, 32, 31, 78, 8)\n",
-    "        x2 = F.relu(model.bn2(model.conv2(x1)))              # (1, 64, 31, 78, 8)\n",
-    "    \n",
-    "    x2 = x2.squeeze(0)[:, 30, :, :]  # Shape: (64, 78, 8)\n",
-    "\n",
-    "    fig, axes = plt.subplots(8, 8, figsize=(20, 16))\n",
-    "    fig.suptitle(\"Conv2 Activations at Frame 30\", fontsize=16)\n",
-    "\n",
-    "    for i in range(64):\n",
-    "        ax = axes[i // 8][i % 8]\n",
-    "        sns.heatmap(x2[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
-    "        ax.set_title(f\"F{i}\")\n",
-    "        ax.axis('off')\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv2_activations.png\"))\n",
-    "    plt.close()\n",
-    "\n",
-    "def plot_conv3_activations(model, input_tensor, output_dir, index):\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
-    "        x1 = F.relu(model.bn1(model.conv1(input_tensor)))    # (1, 32, 31, 78, 8)\n",
-    "        x2 = F.relu(model.bn2(model.conv2(x1)))              # (1, 64, 31, 78, 8)\n",
-    "        x2 = model.se1(x2)\n",
-    "        x3 = F.relu(model.bn3(model.conv3(x2)))              # (1, 128, 31, 78, 8)\n",
-    "    \n",
-    "    x3 = x3.squeeze(0)[:, 30, :, :]  # Shape: (128, 78, 8)\n",
-    "\n",
-    "    fig, axes = plt.subplots(8, 16, figsize=(24, 16))\n",
-    "    fig.suptitle(\"Conv3 Activations at Frame 30\", fontsize=16)\n",
-    "\n",
-    "    for i in range(128):\n",
-    "        ax = axes[i // 16][i % 16]\n",
-    "        sns.heatmap(x3[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
-    "        ax.set_title(f\"F{i}\", fontsize=8)\n",
-    "        ax.axis('off')\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv3_activations.png\"))\n",
-    "    plt.close()\n",
-    "\n",
-    "# ===============================\n",
-    "# Main Visualization Caller\n",
-    "# ===============================\n",
-    "def create_visualizations_model(data, model, output_dir=\"../../visualizations\"):\n",
-    "    if not data:\n",
-    "        print(\"No data to visualize.\")\n",
-    "        return\n",
-    "\n",
-    "    os.makedirs(output_dir, exist_ok=True)\n",
-    "    index = 10\n",
-    "    if index >= len(data):\n",
-    "        print(\"Invalid index.\")\n",
-    "        return\n",
-    "\n",
-    "    sample = data[index]\n",
-    "    chunk = np.array(sample[\"eeg_chunk\"], dtype=np.float32)[:, :, SELECTED_CHANNELS]\n",
-    "    chunk[30] *= 3.0\n",
-    "    input_tensor = torch.tensor(chunk).unsqueeze(0)\n",
-    "\n",
-    "    plot_conv1_activations(model, input_tensor, output_dir, index)\n",
-    "    plot_conv2_activations(model, input_tensor, output_dir, index)\n",
-    "    plot_conv3_activations(model, input_tensor, output_dir, index)\n",
-    "\n",
-    "\n",
-    "    print(f\"Visualizations generated at: {output_dir}\")\n",
-    "\n",
-    "# Run visualization\n",
-    "create_visualizations_model(raw_data, model)"
+    "# # ===============================\n",
+    "# # Visualizations\n",
+    "# # ===============================\n",
+    "# def plot_conv1_activations(model, input_tensor, output_dir, index):\n",
+    "#     model.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
+    "#         x1 = F.relu(model.bn1(model.conv1(input_tensor)))\n",
+    "#     x1 = x1.squeeze(0)[:, 30, :, :]\n",
+    "#     fig, axes = plt.subplots(4, 8, figsize=(20, 10))\n",
+    "#     fig.suptitle(\"Conv1 Activations at Frame 30\", fontsize=16)\n",
+    "#     for i in range(32):\n",
+    "#         ax = axes[i // 8][i % 8]\n",
+    "#         sns.heatmap(x1[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "#         ax.set_title(f\"F{i}\")\n",
+    "#         ax.axis('off')\n",
+    "#     plt.tight_layout()\n",
+    "#     plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv1_activations.png\"))\n",
+    "#     plt.close()\n",
+    "# \n",
+    "# \n",
+    "# def plot_conv2_activations(model, input_tensor, output_dir, index):\n",
+    "#     model.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
+    "#         x1 = F.relu(model.bn1(model.conv2(input_tensor)))\n",
+    "#     x1 = x1.squeeze(0)[:, 30, :, :]\n",
+    "#     fig, axes = plt.subplots(4, 8, figsize=(20, 10))\n",
+    "#     fig.suptitle(\"Conv1 Activations at Frame 30\", fontsize=16)\n",
+    "#     for i in range(32):\n",
+    "#         ax = axes[i // 8][i % 8]\n",
+    "#         sns.heatmap(x1[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "#         ax.set_title(f\"F{i}\")\n",
+    "#         ax.axis('off')\n",
+    "#     plt.tight_layout()\n",
+    "#     plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv1_activations.png\"))\n",
+    "#     plt.close()\n",
+    "# \n",
+    "# def plot_conv2_activations(model, input_tensor, output_dir, index):\n",
+    "#     model.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         input_tensor = input_tensor.unsqueeze(0).to(DEVICE)  # (1, 1, 31, 78, 8)\n",
+    "#         x1 = F.relu(model.bn1(model.conv1(input_tensor)))    # (1, 32, 31, 78, 8)\n",
+    "#         x2 = F.relu(model.bn2(model.conv2(x1)))              # (1, 64, 31, 78, 8)\n",
+    "# \n",
+    "#     x2 = x2.squeeze(0)[:, 30, :, :]  # Shape: (64, 78, 8)\n",
+    "# \n",
+    "#     fig, axes = plt.subplots(8, 8, figsize=(20, 16))\n",
+    "#     fig.suptitle(\"Conv2 Activations at Frame 30\", fontsize=16)\n",
+    "# \n",
+    "#     for i in range(64):\n",
+    "#         ax = axes[i // 8][i % 8]\n",
+    "#         sns.heatmap(x2[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "#         ax.set_title(f\"F{i}\")\n",
+    "#         ax.axis('off')\n",
+    "# \n",
+    "#     plt.tight_layout()\n",
+    "#     plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv2_activations.png\"))\n",
+    "#     plt.close()\n",
+    "# \n",
+    "# def plot_conv3_activations(model, input_tensor, output_dir, index):\n",
+    "#     model.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
+    "#         x1 = F.relu(model.bn1(model.conv1(input_tensor)))    # (1, 32, 31, 78, 8)\n",
+    "#         x2 = F.relu(model.bn2(model.conv2(x1)))              # (1, 64, 31, 78, 8)\n",
+    "#         x2 = model.se1(x2)\n",
+    "#         x3 = F.relu(model.bn3(model.conv3(x2)))              # (1, 128, 31, 78, 8)\n",
+    "# \n",
+    "#     x3 = x3.squeeze(0)[:, 30, :, :]  # Shape: (128, 78, 8)\n",
+    "# \n",
+    "#     fig, axes = plt.subplots(8, 16, figsize=(24, 16))\n",
+    "#     fig.suptitle(\"Conv3 Activations at Frame 30\", fontsize=16)\n",
+    "# \n",
+    "#     for i in range(128):\n",
+    "#         ax = axes[i // 16][i % 16]\n",
+    "#         sns.heatmap(x3[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "#         ax.set_title(f\"F{i}\", fontsize=8)\n",
+    "#         ax.axis('off')\n",
+    "# \n",
+    "#     plt.tight_layout()\n",
+    "#     plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv3_activations.png\"))\n",
+    "#     plt.close()\n",
+    "# \n",
+    "# # ===============================\n",
+    "# # Main Visualization Caller\n",
+    "# # ===============================\n",
+    "# def create_visualizations_model(data, model, output_dir=\"../../visualizations\"):\n",
+    "#     if not data:\n",
+    "#         print(\"No data to visualize.\")\n",
+    "#         return\n",
+    "# \n",
+    "#     os.makedirs(output_dir, exist_ok=True)\n",
+    "#     index = 10\n",
+    "#     if index >= len(data):\n",
+    "#         print(\"Invalid index.\")\n",
+    "#         return\n",
+    "# \n",
+    "#     sample = data[index]\n",
+    "#     chunk = np.array(sample[\"eeg_chunk\"], dtype=np.float32)[:, :, SELECTED_CHANNELS]\n",
+    "#     chunk[30] *= 3.0\n",
+    "#     input_tensor = torch.tensor(chunk).unsqueeze(0)\n",
+    "# \n",
+    "#     plot_conv1_activations(model, input_tensor, output_dir, index)\n",
+    "#     plot_conv2_activations(model, input_tensor, output_dir, index)\n",
+    "#     plot_conv3_activations(model, input_tensor, output_dir, index)\n",
+    "# \n",
+    "# \n",
+    "#     print(f\"Visualizations generated at: {output_dir}\")\n",
+    "# \n",
+    "# # Run visualization\n",
+    "# create_visualizations_model(raw_data, model)"
    ]
   }
  ],
