--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-02T13:18:43.254111400Z",
-     "start_time": "2025-07-02T13:17:19.742430500Z"
+     "end_time": "2025-07-02T13:27:53.219662600Z",
+     "start_time": "2025-07-02T13:27:16.151767200Z"
     }
    },
    "outputs": [
@@ -16,42 +16,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load processed data from: ../../data/sentences_eeg_train_set1.pkl\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg_train_set2.pkl\n",
       "Successfully loaded processed data.\n",
-      "Attempting to load processed data from: ../../data/sentences_eeg_val_set1.pkl\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg_val_set2.pkl\n",
       "Successfully loaded processed data.\n",
-      "Predicted: G | True: G\n",
-      "Predicted: K | True: K\n",
-      "Predicted: E | True: E\n",
-      "Predicted: W | True: W\n",
-      "Predicted: O | True: C\n",
-      "Predicted: E | True: E\n",
-      "Predicted: E | True: E\n",
-      "Predicted: L | True: L\n",
-      "Predicted: N | True: N\n",
-      "Predicted: M | True: M\n",
-      "Predicted: G | True: G\n",
-      "Predicted: E | True: E\n",
-      "Predicted: E | True: E\n",
-      "Predicted: E | True: E\n",
-      "Predicted: E | True: E\n",
-      "Predicted: A | True: A\n",
-      "Predicted: A | True: G\n",
-      "Predicted: N | True: N\n",
-      "Predicted: O | True: O\n",
-      "Predicted: L | True: L\n",
-      "Predicted: T | True: T\n",
       "Predicted: F | True: F\n",
-      "Predicted: T | True: T\n",
-      "Predicted: N | True: N\n",
-      "Predicted: N | True: N\n",
-      "Predicted: N | True: N\n",
-      "Predicted: T | True: T\n",
       "Predicted: O | True: O\n",
-      "Predicted: T | True: T\n",
+      "Predicted: K | True: H\n",
+      "Predicted: E | True: E\n",
+      "Predicted: K | True: H\n",
+      "Predicted: F | True: F\n",
+      "Predicted: C | True: T\n",
+      "Predicted: K | True: K\n",
+      "Predicted: K | True: H\n",
+      "Predicted: R | True: R\n",
+      "Predicted: L | True: L\n",
+      "Predicted: R | True: R\n",
+      "Predicted: I | True: I\n",
+      "Predicted: N | True: C\n",
+      "Predicted: E | True: Y\n",
       "Predicted: D | True: D\n",
+      "Predicted: R | True: G\n",
+      "Predicted: A | True: A\n",
+      "Predicted: E | True: O\n",
+      "Predicted: R | True: B\n",
+      "Predicted: E | True: E\n",
+      "Predicted: O | True: O\n",
+      "Predicted: K | True: H\n",
+      "Predicted: E | True: E\n",
+      "Predicted: D | True: D\n",
+      "Predicted: N | True: C\n",
+      "Predicted: O | True: O\n",
+      "Predicted: K | True: H\n",
+      "Predicted: A | True: A\n",
+      "Predicted: L | True: L\n",
       "\n",
-      "Test Accuracy: 90.52%\n",
+      "Test Accuracy: 66.43%\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
@@ -59,35 +59,35 @@
       "           4       0.00      0.00      0.00         0\n",
       "           6       0.00      0.00      0.00         0\n",
       "           8       0.00      0.00      0.00         0\n",
-      "           A       0.95      1.00      0.97        69\n",
-      "           B       0.73      0.73      0.73        15\n",
-      "           C       1.00      0.78      0.88        41\n",
-      "           D       0.82      1.00      0.90        50\n",
-      "           E       0.87      1.00      0.93       123\n",
-      "           F       1.00      1.00      1.00        21\n",
-      "           G       0.88      0.85      0.87        27\n",
-      "           H       0.92      1.00      0.96        61\n",
-      "           I       1.00      0.84      0.91        55\n",
-      "           J       0.00      0.00      0.00         0\n",
-      "           K       1.00      0.68      0.81        19\n",
-      "           L       1.00      1.00      1.00        57\n",
-      "           M       1.00      0.75      0.86        20\n",
-      "           N       1.00      1.00      1.00        45\n",
-      "           O       0.83      0.70      0.76        64\n",
-      "           P       1.00      0.70      0.82        10\n",
-      "           Q       0.00      0.00      0.00         1\n",
-      "           R       0.92      1.00      0.96        61\n",
-      "           T       0.92      0.92      0.92        60\n",
-      "           U       0.40      0.44      0.42         9\n",
-      "           V       1.00      0.67      0.80         6\n",
-      "           W       1.00      1.00      1.00        26\n",
-      "           X       0.00      0.00      0.00         1\n",
-      "           Y       0.83      0.42      0.56        12\n",
+      "           A       1.00      1.00      1.00        61\n",
+      "           B       0.06      0.17      0.09        18\n",
+      "           C       0.19      0.34      0.24        29\n",
+      "           D       1.00      0.19      0.31        54\n",
+      "           E       0.82      1.00      0.90        99\n",
+      "           F       0.84      1.00      0.91        26\n",
+      "           G       1.00      0.36      0.53        25\n",
+      "           H       1.00      0.29      0.45        75\n",
+      "           I       1.00      0.33      0.49        43\n",
+      "           J       0.00      0.00      0.00         1\n",
+      "           K       0.32      1.00      0.49        25\n",
+      "           L       1.00      1.00      1.00        72\n",
+      "           M       0.00      0.00      0.00        20\n",
+      "           N       0.71      1.00      0.83        46\n",
+      "           O       1.00      0.96      0.98        71\n",
+      "           P       0.00      0.00      0.00        14\n",
+      "           Q       0.00      0.00      0.00         0\n",
+      "           R       0.61      1.00      0.76        54\n",
+      "           T       1.00      0.26      0.41        58\n",
+      "           U       0.00      0.00      0.00        14\n",
+      "           V       0.33      0.83      0.48        12\n",
+      "           W       0.57      1.00      0.73        24\n",
+      "           X       0.00      0.00      0.00         0\n",
+      "           Y       1.00      0.12      0.22        16\n",
       "           Z       0.00      0.00      0.00         1\n",
       "\n",
-      "    accuracy                           0.91       854\n",
-      "   macro avg       0.68      0.62      0.65       854\n",
-      "weighted avg       0.92      0.91      0.90       854\n"
+      "    accuracy                           0.66       858\n",
+      "   macro avg       0.48      0.42      0.39       858\n",
+      "weighted avg       0.79      0.66      0.64       858\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "# Constants\n",
     "# ===============================\n",
     "NUM_CLASSES = 36\n",
-    "MODEL_PATH = \"../../model/ecd/trained_eegcnn_model_selected_channels_set1.pth\"\n",
+    "MODEL_PATH = \"../../model/ecd/trained_eegcnn_model_selected_channels_set2.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "SELECTED_CHANNELS = [10, 33, 48, 50, 52, 55, 59, 61]\n",
     "\n",
@@ -130,7 +130,6 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        chunk = np.array(self.data[idx][\"eeg_chunk\"], dtype=np.float32)[:, :, SELECTED_CHANNELS]\n",
-    "        chunk[30] *= 3.0\n",
     "        label = self.label_encoder.transform([self.data[idx][\"character\"]])[0]\n",
     "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)\n",
     "\n",
@@ -188,12 +187,12 @@
     "# ===============================\n",
     "\n",
     "\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_train_set1.pkl\")\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_train_set2.pkl\")\n",
     "all_labels = [item[\"character\"] for item in raw_data]\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(all_labels)\n",
     "\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_val_set1.pkl\")\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_val_set2.pkl\")\n",
     "if not raw_data:\n",
     "    raise ValueError(\"Failed to load data.\")\n",
     "_, test_set = train_test_split(raw_data, test_size=0.2, random_state=3)\n",
