--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "189d752f13e679c2",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-02T13:18:17.182749600Z",
-     "start_time": "2025-07-02T13:18:17.084250700Z"
+     "end_time": "2025-07-03T06:03:47.129369500Z",
+     "start_time": "2025-07-03T06:03:47.085687700Z"
     }
    },
    "outputs": [],
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "1271fe52447729d6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-02T13:18:17.220739700Z",
-     "start_time": "2025-07-02T13:18:17.112492100Z"
+     "end_time": "2025-07-03T06:03:47.233992800Z",
+     "start_time": "2025-07-03T06:03:47.141073500Z"
     }
    },
    "outputs": [
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "fee7df9628f0876a",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-02T13:18:43.300683300Z",
-     "start_time": "2025-07-02T13:18:17.132639800Z"
+     "end_time": "2025-07-03T06:03:57.120296400Z",
+     "start_time": "2025-07-03T06:03:47.236035800Z"
     }
    },
    "outputs": [
@@ -660,13 +660,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "35f7cccb37f237b4",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-02T13:18:44.077712500Z",
-     "start_time": "2025-07-02T13:18:43.304690100Z"
+     "end_time": "2025-07-03T06:04:00.388888300Z",
+     "start_time": "2025-07-03T06:03:57.120296400Z"
     }
    },
    "outputs": [
@@ -702,13 +702,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "5e44c00fca7cb60f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-02T13:18:45.443322Z",
-     "start_time": "2025-07-02T13:18:44.079216500Z"
+     "end_time": "2025-07-03T06:04:03.863579100Z",
+     "start_time": "2025-07-03T06:04:00.396006200Z"
     }
    },
    "outputs": [
@@ -722,20 +722,27 @@
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[ 0.71168303,  0.93274367,  1.0181258 , ...,  0.53064907,\n",
-      "         1.3929416 ,  1.2498274 ],\n",
-      "       [ 0.83918434,  1.0260444 ,  1.0319407 , ...,  0.79336935,\n",
-      "         1.4869034 ,  1.4126298 ],\n",
-      "       [ 0.96911293,  1.103266  ,  1.0132477 , ...,  1.0485287 ,\n",
-      "         1.6188169 ,  1.5175755 ],\n",
+      "Example of first item: [array([[-0.54037046, -1.6272256 , -0.8909307 , ..., -0.36527073,\n",
+      "        -0.45629573, -0.9330822 ],\n",
+      "       [-0.7337005 , -1.8734369 , -1.1107128 , ..., -0.46904737,\n",
+      "        -0.72463924, -1.0288155 ],\n",
+      "       [-0.9022075 , -2.0632687 , -1.289877  , ..., -0.5228547 ,\n",
+      "        -0.94493437, -1.1008296 ],\n",
       "       ...,\n",
-      "       [-0.5430504 , -0.5097524 , -0.69078404, ..., -1.1742845 ,\n",
-      "        -1.5947932 , -1.685561  ],\n",
-      "       [-0.6588568 , -0.6368154 , -0.6984955 , ..., -1.3331498 ,\n",
-      "        -1.7142816 , -1.9098184 ],\n",
-      "       [-0.77863264, -0.8102392 , -0.7087084 , ..., -1.5143999 ,\n",
-      "        -1.823878  , -2.159508  ]], dtype=float32)]\n",
+      "       [-1.4762    , -1.1797712 , -1.7743834 , ..., -1.6437798 ,\n",
+      "        -0.24375428, -1.5941732 ],\n",
+      "       [-1.3776388 , -1.12282   , -1.6979017 , ..., -1.7012546 ,\n",
+      "        -0.3126163 , -1.714043  ],\n",
+      "       [-1.2832029 , -1.011978  , -1.5232986 , ..., -1.697937  ,\n",
+      "        -0.3192157 , -1.7902619 ]], dtype=float32)]\n",
       "Example of first item: (78, 64)\n",
+      "Example of first item: [[0.0045 0.0045 0.0045 ... 0.0045 0.0045 0.0045]\n",
+      " [0.0002 0.0002 0.0002 ... 0.0002 0.0002 0.0002]\n",
+      " [0.0006 0.0006 0.0006 ... 0.0006 0.0006 0.0006]\n",
+      " ...\n",
+      " [0.0002 0.0002 0.0002 ... 0.0002 0.0002 0.0002]\n",
+      " [0.0006 0.0006 0.0006 ... 0.0006 0.0006 0.0006]\n",
+      " [0.     0.     0.     ... 0.     0.     0.    ]]\n",
       "Example of first item: 0.0045\n",
       "Example of first item: 0.9564\n"
      ]
@@ -753,6 +760,7 @@
     "        print(\"Example of first item:\", final_data[1][\"sentence\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"eeg_chunk\"][0:1])\n",
     "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"].shape)\n",
+    "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"][0][0])\n",
     "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"][7][0])\n",
     "else:\n",
